# public-demo

./: .gitmodules
demo-app/application/: package-lock.json
failinglockfile/: package-lock.json  package.json
failinglockfile2/: package.json
frankonode/: package-lock.json  package.json
frankoyarn/: package.json
nodejs/: package-lock.json  package.json
poetry/: pyproject.toml
yarntest/: package.json
yarnversion3/: README.md  package.json
