[project]
name = "frankpackates"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoav Franko!!!",email = "yoav.franko@wiz.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (==2.32.3)",
    "pyyaml (==5.3)",
    "jinja2 (==2.10.1)",
    "flask ==0.12",        # CVE-2018-1000656
    "django ==2.2.2",      # CVE-2019-12781
    "urllib3 ==1.24.1",    # CVE-2019-11324
    "numpy ==1.16.0"       # CVE-2019-6446
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
