[project]
name = "frankpackates"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoav Franko",email = "yoav.franko@wiz.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (==2.32.4)",
    "pyyaml (==5.4)",
    "jinja2 (==3.1.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
